--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div class="contact-me">
     <h2><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Get In Touch</font></font></h2>
     <h3><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">If you feel like talking about sports or music.</font></font></h3>
-    <p class="cm"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Then let's knock ourselves out together. </font><font style="vertical-align: inherit;">Find me in the below links.</font></font></p>
+    <p class="cm"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Let's knock ourselves out together. </font><font style="vertical-align: inherit;"></font></font></p>
     <a class="btn" href="mailto:anirudhj0204@gmail.com"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">CONTACT ME</font></font></a>
   </div>
 </div>
